# agent-state-kernel

./: .env.example  .gitignore  check_db.py  pyproject.toml
docs/: current-agent-architecture-2026-06-22.md  current-work-memory-2026-06-23.md  examples.md  smoke-tests.md  testing.md
examples/: debug_scenario.py  debug_scenario2.py  debug_scenario3.py  scenario_research.py
scripts/: live_llm_router_smoke.py  live_tool_interrupt_smoke.py  migrate_legacy_state_tables.py  report_legacy_fallback_audit.py  test_core.py  test_fast.py  test_full.py  test_integration.py  test_kms_dispatch.py  test_kms_fast.py  test_kms_integration.py  test_new_table_only.py  test_tiers.py
src/: dashboard.html  kms_server.py
tests/: test_approval_and_observer_task_views.py  test_architecture_ab_experiment.py  test_dispatch_execution.py  test_dispatch_lifecycle_coordinator.py  test_dispatch_preparation.py  test_dispatch_response.py  test_intent_classifier.py  test_kernel_direct_reply_coordinator.py  test_kernel_session_coordinator.py  test_kms_manager_components.py  test_kms_model.py  test_legacy_fallback_audit_report.py  test_legacy_state_migration.py  test_manager_observer_views.py  test_missing_coverage.py  test_notification_coordinator.py  test_observer_notifications.py  test_pipeline_event_flow.py  test_plugin_bridge.py  test_requested_user_scenarios.py  test_route_clarification_coordinator.py  test_runtime_event_adapter.py  test_smoke_interrupt.py  test_state_alias_and_thinker_dispatch.py  test_state_primary_read_switch.py  test_state_source_audit.py  test_task_conversation_refs.py  (+4 more)
(+100 files in other folders)
